--- a/ModelProject/Components/Pages/ModelPage.razor
+++ b/ModelProject/Components/Pages/ModelPage.razor
@@ -2,8 +2,6 @@
 @using ModelProject.Model
 @inject ModelProvider ModelProvider
 @inject NavigationManager NavigationManager
-@inject ModelFileProvider ModelFileProvider
-
 
 <PageTitle>Model Details</PageTitle>
 
@@ -19,23 +17,15 @@ else
             <div class="col-md-6">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        
-                        @*path to display image of the model*@
-                        @foreach (var ImageUrl in imageFiles)
-                        {
-                            <img src="/img/digitalmodels/@digitalModel.ImageUrl" class="img-thumbnail" alt="@digitalModel.Title" onerror="this.onerror = null; this.src='/img/no_digitalmodels.png'">
-                        }
 
-                        @foreach (var file in modelFiles)
-                        {
-                           
-                          <a class="btn btn-success" href="@ModelFileProvider.GetDownloadLink(file)" download="@file">
-                            <i class="bi bi-download"></i> Download @file
-                          </a>
-                            
-                        }
+                        @*path to display image of the model*@
+                       
+                            @foreach (var ImageUrl in imageFiles)
+                            {
+                                <img src="/img/digitalmodels/@digitalModel.ImageUrl" class="img-thumbnail" alt="@digitalModel.Title" onerror="this.onerror = null; this.src='/img/no_digitalmodels.png'">
+                            }
                     </div>
-                    
+
                 </div>
             </div>
             @*Displays all relevent data about a specific model which relates to what the user inputted*@
@@ -45,9 +35,8 @@ else
                 <p><strong>Specifications:</strong> @digitalModel.Specifications</p>
                 <p><strong>Description:</strong> @digitalModel.Description</p>
                 <p><strong>Downloads:</strong> @digitalModel.Downloads</p>
-                <p><strong>File Size:</strong> @digitalModel.FileSize MB</p>
                
-
+                <button @onclick="DownloadModel" class="btn btn-primary">Download Model</button>
                 @*Redirects the user to the homepage if they press the button*@
                 <button @onclick="NavigateToHome" class="btn btn-secondary ms-2">Back to Home</button>
             </div>
@@ -74,20 +63,35 @@ else
     private List<string> imageFiles = new();
     private List<string> modelFiles = new();
 
-    //downloads
     protected override async Task OnInitializedAsync()
     {
         digitalModel = await ModelProvider.GetModelByIdAsync(ModelId);
         if (digitalModel != null)
         {
-            //increases downloads by one every click
-            digitalModel.Downloads++;
-            //saves the clicks to the database
-            ModelProvider.UpdateModelAsync(digitalModel);
-            modelFiles = digitalModel.ModelFiles.Split(',').ToList();
             imageFiles = digitalModel.ImageUrl.Split(',').ToList();
+            modelFiles = digitalModel.ModelFiles.Split(',').ToList();
         }
     }
+
+    //downloads
+    private void DownloadModel()
+    {
+        if (digitalModel != null)
+        {
+            //increases the download by one one clicked
+            digitalModel.Downloads++;
+            //updates the download within the database
+            ModelProvider.UpdateModelAsync(digitalModel);
+
+        }
+    }
+
+    // navigation command to the home page
+    private void NavigateToHome()
+    {
+        NavigationManager.NavigateTo("/");
+    }
+}
 
      
     
