--- a/ModelProject/Components/Pages/ModelPage.razor
+++ b/ModelProject/Components/Pages/ModelPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/ModelPage/{ModelId:int}"
+﻿page "/ModelPage/{ModelId:int}"
 @using ModelProject.Model
 @inject ModelProvider ModelProvider
 @inject NavigationManager NavigationManager
@@ -25,20 +25,20 @@ else
                             <img src="/img/digitalmodels/@digitalModel.ImageUrl" class="img-thumbnail" alt="@digitalModel.Title" onerror="this.onerror = null; this.src='/img/no_digitalmodels.png'">
                         }
 
-              
+
                     </div>
 
                 </div>
             </div>
             @*Displays all relevent data about a specific model which relates to what the user inputted*@
-             <div class="col-md-6">
+            <div class="col-md-6">
                 <h1>@digitalModel.Title</h1>
                 <p><strong>Category:</strong> @digitalModel.Category</p>
                 <p><strong>Specifications:</strong> @digitalModel.Specifications</p>
                 <p><strong>Description:</strong> @digitalModel.Description</p>
                 <p><strong>Downloads:</strong> @digitalModel.Downloads</p>
                 <p><strong>File Size:</strong> @digitalModel.FileSize MB</p>
-               
+
 
                 @*Redirects the user to the homepage if they press the button*@
                 <button @onclick="NavigateToHome" class="btn btn-secondary ms-2">Back to Home</button>
@@ -76,12 +76,12 @@ else
         }
     }
 
-    //downloads    
+    //downloads
     private void DownloadModel()
     {
         if (digitalModel != null)
         {
-            //increases the download by one one clicked 
+            //increases the download by one one clicked
             digitalModel.Downloads++;
             //updates the download within the database
             ModelProvider.UpdateModelAsync(digitalModel);
