I fixed the upload and working on connecting the user with the model

--- a/ModelProject/Components/Pages/Home.razor
+++ b/ModelProject/Components/Pages/Home.razor
@@ -30,7 +30,7 @@ else
                         <div class="card-body">
                             <h5 class="card-title">@model.Title</h5>
                             <p class="card-text">@model.Category</p>
-                            <button @onclick="@(() => GoToModelPage(model.Id))" class="btn btn-outline-primary">View Details</button>
+                            <button @onclick="@(() => GoToModelPage(model.Id))" class="btn btn-outline-primary" width="20">View Details</button>
                         </div>
                     </div>
                 </div>
