Still connecting the user to model

--- a/ModelProject/Components/Pages/ModelPage.razor
+++ b/ModelProject/Components/Pages/ModelPage.razor
@@ -32,10 +32,10 @@ else
             </div>
             @*Displays all relevent data about a specific model which relates to what the user inputted*@
             <div class="col-md-6">
-                @{
-                    var modelDesigner = ReturnAuthorOfModel(digitalModel);
+                
+                   
 
-                }
+               
                 <h1>@digitalModel.Title</h1>
                 <p><strong>Category:</strong> @digitalModel.Category</p>
                 <p><strong>Specifications:</strong> @digitalModel.Specifications</p>
@@ -100,13 +100,9 @@ else
         NavigationManager.NavigateTo("/");
     }
 
-    private string ReturnAuthorOfModel(Model.DigitalModel digitalmodel)
-    {
-        return modelProvider.GetUserByModel(digitalmodel);
-    }
 
-    private string ReturnAurthorOfPost(Model.DigitalModel digitalmodel)
-    {
-        return modelProvider.GetUserByModel(digitalmodel);
-    }
+    //private string ReturnAurthorOfPost(Model.DigitalModel digitalmodel)
+    //{
+       // return modelProvider.GetUserByModel(digitalmodel);
+   // }
 }
